<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2020 Deep Dive Coding/CNM Ingenuity, Inc.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0>

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<resources>

  <string name="app_name">Sliding Tiles</string>

  <string name="no_move_message">The selected tile can\'t be moved.</string>
  <string name="start_message">Press &#x25b6; in the action bar to start.</string>
  <string name="solved_message">You solved the puzzle!</string>
  <string name="new_puzzle">New</string>
  <string name="reset_puzzle">Reset</string>
  <string name="move_counter_format">Moves: %1$-3d</string>
  <string name="short_timer_format">Time: %1$02d:%2$02d</string>
  <string name="long_timer_format">Time: %1$d:%2$02d:%3$02d</string>
  <string name="overlay_format">%1$d</string>
  <string name="show_overlay">Show tile numbers</string>

  <string name="scoreboard">High scores</string>
  <string name="license_info">Credits &amp; licenses</string>
  <string name="sign_out">Sign out</string>
  <string name="settings">Settings</string>

  <string name="skip_sign_in">Skip sign in</string>
  <string name="login_failure">Unable to sign in with provided credentials</string>

  <string name="animation_pref_key">animation</string>
  <string name="animation_pref_title">Tile slide animation</string>
  <string name="animation_pref_summary">Enable/disable tile slide animation. (Animation gives visual feedback, but consumes time on the clock.)</string>

  <string name="size_pref_key">size</string>
  <string name="size_pref_title">Puzzle size</string>
  <string name="size_pref_summary">New puzzles will measure this number of tiles in height and width.</string>

  <string name="image_pref_key">image</string>
  <string name="image_pref_title">Puzzle image</string>
  <string name="image_pref_summary">Puzzles (including the puzzle currently in progress) will use this image, sliced into tiles.</string>
  <string name="image_pref_default">Android robot##res##android_robot_circle</string>

  <string name="browse_gallery_spec">Browse gallery</string>

  <string name="image_uri_tag">uri</string>
  <string name="image_resource_tag">res</string>
  <string name="image_spec_delimiter">##</string>
  <string name="image_spec_format">%1$s##%2$s##%3$s</string>
  <string name="title_settings">Settings</string>
  <string name="title_scoreboard">High scores</string>
  <string name="title_license">Credits &amp; licenses</string>
  <string name="thumbnail_placeholder">Thumbnail</string>

  <string-array name="resource_images">
    <item>@string/image_pref_default</item>
    <item>Wind Rose of Jos&#xe9; de Aguiar##res##compass_rose</item>
    <item>Penrose tiling with 5-fold symmetry##res##penrose_tiling_rhombi</item>
  </string-array>

  <string name="permissions_title">Permissions</string>
  <string name="read_external_storage_explanation">If permission is granted to read gallery images, these can be browsed and used as puzzle images.</string>
  <string name="sign_in">Sign in</string>
  <string name="more">More details</string>
  <string name="play">Play</string>
  <string name="pause">Pause</string>
  <string name="reset">Reset</string>
  <string name="create">New puzzle</string>
  <string name="instructions">Instructions</string>
  <string name="title_instructions">Instructions</string>

  <string name="license_url">https://ddc-java.github.io/sliding-tiles/notice</string>
  <string name="instructions_url">https://ddc-java.github.io/sliding-tiles/instructions</string>

</resources>
