<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2020 Deep Dive Coding/CNM Ingenuity, Inc.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0>

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<menu
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <!--  TODO Make visible when scoreboard is implemented.-->
  <item
    android:id="@+id/scoreboard"
    android:title="@string/scoreboard"
    android:visible="false"
    app:showAsAction="never"/>

  <item
    android:id="@+id/sign_out"
    android:title="@string/sign_out"
    android:visible="false"
    app:showAsAction="never"/>

  <item
    android:id="@+id/sign_in"
    android:title="@string/sign_in"
    android:visible="false"
    app:showAsAction="never"/>

  <item
    android:id="@+id/instructions"
    android:title="@string/instructions"
    app:showAsAction="never"/>

  <item
    android:id="@+id/license_info"
    android:title="@string/license_info"
    app:showAsAction="never"/>

  <item
    android:id="@+id/settings"
    android:title="@string/settings"
    app:showAsAction="never"/>

</menu>