<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  tools:ignore="AlwaysShowAction">

  <item
    android:id="@+id/play"
    android:title="@string/play"
    android:icon="@drawable/ic_play"
    app:showAsAction="always"/>

  <item
    android:id="@+id/pause"
    android:title="@string/pause"
    android:icon="@drawable/ic_pause"
    android:visible="false"
    app:showAsAction="always"/>

  <item
    android:id="@+id/reset"
    android:title="@string/reset"
    android:icon="@drawable/ic_replay"
    app:showAsAction="always"/>

  <item
    android:id="@+id/create"
    android:title="@string/create"
    android:icon="@drawable/ic_add"
    app:showAsAction="always"/>

</menu>