<?xml version="1.0" encoding="utf-8"?>
<navigation
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/navigation_map"
  app:startDestination="@+id/navigation_play">

  <fragment
    android:id="@+id/navigation_play"
    android:label="@string/app_name"
    android:name="edu.cnm.deepdive.slidingtiles.controller.PlayFragment"
    tools:layout="@layout/fragment_play"/>

  <fragment
    android:id="@+id/navigation_settings"
    android:label="@string/title_settings"
    android:name="edu.cnm.deepdive.slidingtiles.controller.SettingsFragment"/>

  <fragment
    android:id="@+id/navigation_scoreboard"
    android:label="@string/title_scoreboard"
    android:name="edu.cnm.deepdive.slidingtiles.controller.ScoreboardFragment"
    tools:layout="@layout/fragment_scoreboard"/>

</navigation>