<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2020 Deep Dive Coding/CNM Ingenuity, Inc.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0>

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:padding="@dimen/layout_margin">

  <TextView
    android:id="@+id/title"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    style="@style/AppTheme.ScreenText.ImageTitle"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"/>

  <GridView
    android:id="@+id/tile_grid"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:numColumns="3"
    android:background="@color/puzzleBackground"
    android:layout_margin="@dimen/layout_margin"
    android:padding="@dimen/grid_padding"
    app:layout_constraintDimensionRatio="1:1"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/title"/>

  <TextView
    android:id="@+id/move_counter"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/layout_margin"
    style="@style/AppTheme.ScreenText"
    app:layout_constraintBaseline_toBaselineOf="@+id/show_overlay"
    app:layout_constraintStart_toStartOf="parent"/>

  <CheckBox
    android:id="@+id/show_overlay"
    android:text="@string/show_overlay"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="@dimen/layout_margin"
    style="@style/AppTheme.ScreenText"
    app:layout_constraintTop_toBottomOf="@id/tile_grid"
    app:layout_constraintEnd_toEndOf="parent"/>

  <TextView
    android:id="@+id/puzzle_timer"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/layout_margin"
    style="@style/AppTheme.ScreenText"
    app:layout_constraintTop_toBottomOf="@id/move_counter"
    app:layout_constraintStart_toStartOf="parent"/>

  <ProgressBar
    android:id="@+id/progress_display"
    style="@android:style/Widget.ProgressBar.Horizontal"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/layout_margin"
    android:progressDrawable="@drawable/progress_gradient"
    app:layout_constraintTop_toBottomOf="@id/show_overlay"
    app:layout_constraintBottom_toTopOf="@+id/new_puzzle"
    app:layout_constraintStart_toStartOf="@+id/new_puzzle"
    app:layout_constraintEnd_toEndOf="@+id/reset_puzzle"/>

  <Button
    android:id="@+id/new_puzzle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/layout_margin"
    android:text="@string/new_puzzle"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toStartOf="@+id/reset_puzzle"/>

  <Button
    android:id="@+id/reset_puzzle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/layout_margin"
    android:text="@string/reset_puzzle"
    app:layout_constraintStart_toEndOf="@id/new_puzzle"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"/>

  <ProgressBar
    android:id="@+id/loading_indicator"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:visibility="gone"
    app:layout_constraintTop_toTopOf="@id/tile_grid"
    app:layout_constraintBottom_toBottomOf="@id/tile_grid"
    app:layout_constraintStart_toStartOf="@id/tile_grid"
    app:layout_constraintEnd_toEndOf="@id/tile_grid"/>

</androidx.constraintlayout.widget.ConstraintLayout>